...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/save"
        app:srcCompat="@drawable/ic_done" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
...
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="?attr/toolbarStyle" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options"/>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photos"/>
        </com.google.android.material.tabs.TabLayout>

...
                            android:alpha="0.8"
                            android:src="@drawable/ic_mode_edit_white_24dp"/>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/storeNameField"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/storeName">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/storeNameEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="textCapWords" />

                    </com.google.android.material.textfield.TextInputLayout>
...
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/inputPadding"
                    android:paddingTop="@dimen/inputPadding"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/cardIdField"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cardId">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/cardIdView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
...
                        android:id="@+id/balanceCurrencyView"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:hint="@string/currency"
                        android:labelFor="@+id/balanceCurrencyField">

                        <AutoCompleteTextView
                            android:id="@+id/balanceCurrencyField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- Balance -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/balanceView"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:hint="@string/balance"
                        android:labelFor="@+id/balanceField">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/balanceField"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
...
