...

    <PreferenceCategory
        android:title="@string/settings_category_title_card_creation"
        app:iconSpaceReserved="false">

        <ListPreference
            android:key="@string/settings_key_default_currency"
            android:title="@string/settings_default_currency"
            android:defaultValue="@string/points"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
...
